--- a/Koha/Plugin/Fi/KohaSuomi/AutoFrameworkCode/configure.tt
+++ b/Koha/Plugin/Fi/KohaSuomi/AutoFrameworkCode/configure.tt
@@ -12,6 +12,8 @@
 <div id="doc3">
     <h3>Koha: Auto Framework Code Plugin: Configuration</h3>
 
+    [% IF error %]<div class="dialog alert"><strong>Error:</strong> [% error | html %]</div>[% END %]
+
     <form method="get">
         <!-- Always pass these two parameters so the plugin system knows what to execute! -->
         <input type="hidden" name="class" value="[% CLASS %]"/>
